--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -35,22 +35,20 @@
 
   <div class="container-fluid">
 
-    <div class="row">
-      <div class="col-sm-8">
-        <div class="chart-wrapper">
-          <div class="chart-title">
-            Cell Title
-          </div>
-          <div class="chart-stage">
-            <div id="grid-1-1">
-              <img data-src="holder.js/100%x240/white/text:#grid-1-1">
-            </div>
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
-          </div>
-        </div>
-      </div>
+ <div class=”row”>
+  <div class=”col-sm-8">
+   <div class=”chart-wrapper”>
+    <div class=”chart-title”>
+     Last 30 Days Events
+    </div>
+    <div class=”chart-stage” id=”my_charts”>
+    </div>
+   <div class=”chart-notes”>
+   Notes about this chart
+   </div>
+  </div>
+ </div>
+      
       <div class="col-sm-4">
         <div class="chart-wrapper">
           <div class="chart-title">
@@ -167,5 +165,41 @@
   <script type="text/javascript" src="../../assets/lib/keen-js/dist/keen.min.js"></script>
   <script type="text/javascript" src="../../assets/js/meta.js"></script>
 
+var client = new Keen({
+  projectId: "563a13c896773d4a75c3bf93",
+  readKey: "9d45d36b3d3040533eb3a9f2e8bcc9e317d6b4e7e2cbb413ce959e7c0f8b926a7b82523fc0acd774ef024a0f4bddcc2bd8e992e2f61d9aed7b7f09bcb63bc0a1ebee2e0ebd0e2792dba3dc4ae1ae9c11c19e54753574a726dea4eec16e463aa06196d6876d167a9d668f236f25a8857d"
+
+});
+
+Keen.ready(function(){
+  
+  var query = new Keen.Query("count", {
+    eventCollection: "collect",
+    filters: [
+    {
+        "operator": "eq",
+        "property_name": "coreid",
+        "property_value": "51ff67065067545711360687"
+    }
+],
+    timeframe: "this_14_days",
+    timezone: "UTC"
+  });
+  
+  
+       // and draw a column chart
+     client.draw(daily_send_static, document.getElementById("my_chart"), {
+        chartType: "columnchart",
+        title: false,
+        height: 250,
+        width: "auto",
+        chartOptions: {
+          chartOptions: {
+            isStacked: true
+          }
+        }
+      });
+    });
+    
 </body>
 </html>
