--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -39,12 +39,12 @@
   <div class=”col-sm-8">
    <div class=”chart-wrapper”>
     <div class=”chart-title”>
-     Last 30 Days Events
+   my chart
     </div>
-    <div class=”chart-stage” id=”my_charts”>
+    <div class=”chart-stage” id=”my_chart”>
     </div>
    <div class=”chart-notes”>
-   Notes about this chart
+ yeah baby!
    </div>
   </div>
  </div>
