--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -189,7 +189,7 @@ Keen.ready(function(){
   
   
        // and draw a column chart
-     client.draw(daily_send_static, document.getElementById("my_chart"), {
+     client.draw(query, document.getElementById("my_chart"), {
         chartType: "columnchart",
         title: false,
         height: 250,
