--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -35,19 +35,22 @@
 
   <div class="container-fluid">
 
- <div class=”row”>
-  <div class=”col-sm-8">
-   <div class=”chart-wrapper”>
-    <div class=”chart-title”>
-   my chart
-    </div>
-    <div class=”chart-stage” id=”mychart”>
-    </div>
-   <div class=”chart-notes”>
- yeah baby!
-   </div>
-  </div>
- </div>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Cell Title
+          </div>
+          <div class="chart-stage">
+            <div id="mychart">
+            
+            </div>
+          </div>
+          <div class="chart-notes">
+            Notes about this chart
+          </div>
+        </div>
+      </div>
       
       <div class="col-sm-4">
         <div class="chart-wrapper">
