--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -193,7 +193,7 @@ Keen.ready(function(){
   
        // and draw a column chart
      client.draw(query, document.getElementById("mychart"), {
-        chartType: "columnchart",
+        chartType: "metric",
         title: false,
         height: 250,
         width: "auto",
