--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -58,7 +58,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x240/white">
+            <div id="mychart">
           </div>
           <div class="chart-notes">
             Notes about this chart
