--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -59,6 +59,8 @@
           </div>
           <div class="chart-stage">
             <div id="mychart">
+            
+            </div>
           </div>
           <div class="chart-notes">
             Notes about this chart
