--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -52,6 +52,7 @@
         </div>
       </div>
       
+      <div class="row">
       <div class="col-sm-4">
         <div class="chart-wrapper">
           <div class="chart-title">
