--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -52,8 +52,25 @@
         </div>
       </div>
       
-      <div class="row">
-      <div class="col-sm-4">
+      
+      <div class="col-sm-8">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            Cell Title
+          </div>
+          <div class="chart-stage">
+            <div id="mychart">
+            
+            </div>
+          </div>
+          <div class="chart-notes">
+            Notes about this chart
+          </div>
+        </div>
+      </div>
+      
+      
+     <div class="col-sm-4">
         <div class="chart-wrapper">
           <div class="chart-title">
             Cell Title
