--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -42,7 +42,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mychart">
+            <div id="my_chart">
             
             </div>
           </div>
@@ -51,24 +51,6 @@
           </div>
         </div>
       </div>
-      
-      
-      <div class="col-sm-8">
-        <div class="chart-wrapper">
-          <div class="chart-title">
-            Cell Title
-          </div>
-          <div class="chart-stage">
-            <div id="mychart">
-            
-            </div>
-          </div>
-          <div class="chart-notes">
-            Notes about this chart
-          </div>
-        </div>
-      </div>
-      
       
      <div class="col-sm-4">
         <div class="chart-wrapper">
