--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -42,7 +42,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="my_chart">
+            <div id="mychart">
             
             </div>
           </div>
