--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -58,7 +58,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mychart2">
+            <div id="mychartt">
             
             </div>
           </div>
@@ -208,7 +208,7 @@ Keen.ready(function(){
  });
  
  // and draw a column chart
-     client.draw(query, document.getElementById("mychart2"), {
+     client.draw(query, document.getElementById("mychartt"), {
         chartType: "metric",
         title: false,
         height: 250,
