--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -220,7 +220,7 @@ Keen.ready(function(){
  //});
   // and draw a column chart
      client.draw(queryy, document.getElementById("mychartt"), {
-        chartType: "metric",
+        chartType: "columnchart",
         title: false,
         height: 250,
         width: "auto",
