--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -217,6 +217,18 @@ Keen.ready(function(){
           }
         }
       });
+      
+           client.draw(query, document.getElementById("mychartt"), {
+        chartType: "metric",
+        title: false,
+        height: 250,
+        width: "auto",
+        chartOptions: {
+          chartOptions: {
+            isStacked: true
+          }
+        }
+      });
  });
 
 
