--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -231,7 +231,7 @@ Keen.ready(function(){
       });
       
 
-client.draw(total_pageviews, document.getElementById("mycharttt"), {
+client.draw(query, document.getElementById("mycharttt"), {
   chartType: "columnchart",
   title: "Daily revenue (7 days)",
   chartOptions: {
