--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -42,7 +42,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mycharttt">
+            <div id="mychart">
             
             </div>
           </div>
@@ -212,7 +212,6 @@ Keen.ready(function(){
         height: 250,
         width: "auto",
         chartOptions: {
-          chartOptions: {
             isStacked: true
           }
         }
@@ -223,7 +222,6 @@ Keen.ready(function(){
         title: false,
         height: 250,
         width: "auto",
-        chartOptions: {
           chartOptions: {
             isStacked: true
           }
@@ -232,12 +230,27 @@ Keen.ready(function(){
       
 
 client.draw(query, document.getElementById("mycharttt"), {
-  chartType: "columnchart",
-  title: "Daily revenue (7 days)",
-  chartOptions: {
-    isStacked: true
-  }
-});
+    chartType: "columnchart",
+    title: false,
+    height: 175,
+    width: "auto",
+    chartOptions: {
+      legend: { position: "none" },
+      tooltip: { trigger: 'none' },
+      chartArea: {
+        left: "5%",
+        top: "5%",
+        height: "85%",
+        width: "93%"
+      },
+      bar: {
+        groupWidth: "85%"
+      },
+      isStacked: true
+    }
+  });
+
+
 
  });
 
