--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -212,6 +212,7 @@ Keen.ready(function(){
         height: 250,
         width: "auto",
         chartOptions: {
+          chartOptions: {
             isStacked: true
           }
         }
@@ -223,13 +224,33 @@ Keen.ready(function(){
         height: 250,
         width: "auto",
           chartOptions: {
+            chartOptions: {
             isStacked: true
           }
         }
       });
       
 
-
+client.draw(query, document.getElementById("mycharttt"), {
+    chartType: "columnchart",
+    title: false,
+    height: 175,
+    width: "auto",
+    chartOptions: {
+      legend: { position: "none" },
+      tooltip: { trigger: 'none' },
+      chartArea: {
+        left: "5%",
+        top: "5%",
+        height: "85%",
+        width: "93%"
+      },
+      bar: {
+        groupWidth: "85%"
+      },
+      isStacked: true
+    }
+  });
 
 
 
