--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -58,7 +58,7 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <div id="mycharttt">
+            <div id="mychartt">
             
             </div>
           </div>
