--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -76,13 +76,14 @@
             Cell Title
           </div>
           <div class="chart-stage">
-            <img data-src="holder.js/100%x120/white">
+             <div id="mycharttt">
           </div>
           <div class="chart-notes">
             Notes about this chart
           </div>
         </div>
       </div>
+      
       <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
