--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -238,6 +238,7 @@ client.draw(query, document.getElementById("mycharttt"), {
     height: 175,
     width: "auto",
     chartOptions: {
+      chartOptions: {
       legend: { position: "none" },
       tooltip: { trigger: 'none' },
       bar: {
