--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -78,6 +78,7 @@
           <div class="chart-stage">
              <div id="mycharttt">
           </div>
+           </div>
           <div class="chart-notes">
             Notes about this chart
           </div>
