--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -235,7 +235,7 @@ Keen.ready(function(){
       
 client.draw(query, document.getElementById("mycharttt"), {
   chartType: "columnchart",
-  title: "Daily revenue (7 days)",
+  title: false,
   height: 250,
   width: "auto",
   chartOptions: {
