--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -234,7 +234,7 @@ Keen.ready(function(){
       });
       
 client.draw(query, document.getElementById("mycharttt"), {
-  chartType: "barchart",
+  chartType: "metric",
   title: false,
   height: 250,
   width: "auto",
