--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -195,8 +195,11 @@ Keen.ready(function(){
     timezone: "UTC"
   });
   
-    var queryy = new Keen.Query("sum", {
+    var queryy = new Keen.Query("count", {
     eventCollection: "collect",
+        groupBy: [
+    "event"
+],
     filters: [
     {
         "operator": "eq",
