--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -237,7 +237,7 @@ Keen.ready(function(){
       });
       
 client.draw(queryy, document.getElementById("mycharttt"), {
-  chartType: "metric",
+  chartType: "columnchart",
   title: false,
   height: 250,
   width: "auto",
