--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -207,6 +207,7 @@ Keen.ready(function(){
         "property_value": "51ff67065067545711360687"
     }
 ],
+    interval: "daily",
     timeframe: "this_30_days",
     timezone: "UTC"
   });
