--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -86,6 +86,31 @@
         </div>
       </div>
        
+       
+       <div class="col-sm-6" id="mapwrap">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            <div class="btn-group-xs">Active Users
+              <button type="button" id="7days" class="btn btn-default">7 Days</button>
+              <button type="button" id="14days" class="btn btn-default">14 Days</button>
+              <button type="button" id="28days" class="btn btn-default">28 Days</button>
+            </div>
+          </div>
+          <div class="chart-stage">
+            <div id="map"></div>
+          </div>
+          <div class="chart-notes">
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <!-- Mapbox.js Assets -->
+  <script type="text/javascript" src='https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox.js/v2.0.0/mapbox.css' rel='stylesheet' />
+  <script type="text/javascript" src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-heat/v0.1.0/leaflet-heat.js'></script>
+  
+  
       <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
