--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -322,7 +322,7 @@ client.draw(queryy, document.getElementById("mycharttt"), {
   initialize = function() {
     setActiveButton("7days");
 
-    L.mapbox.accessToken = "pk.eyJ1Ijoia2Vlbi1pbyIsImEiOiIza0xnNXBZIn0.PgzKlxBmYkOq6jBGErpqOg";
+    L.mapbox.accessToken = "pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg";
     map = L.mapbox.map("map", "keen-io.kae20cg0", {
       attributionControl: true,
       center: [markerStart.lat, markerStart.lng],
