--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -320,7 +320,7 @@ client.draw(queryy, document.getElementById("mycharttt"), {
     setActiveButton("7days");
 
     L.mapbox.accessToken = "pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg";
-    map = L.mapbox.map("map", "keen-io.kae20cg0", {
+    map = L.mapbox.map("map", "mapbox.streets", {
       attributionControl: true,
       center: [markerStart.lat, markerStart.lng],
       zoom: DEFAULTS.zoom
