--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -95,14 +95,10 @@
        <div class="col-sm-6" id="mapwrap">
         <div class="chart-wrapper">
           <div class="chart-title">
-            <div class="btn-group-xs">Active Users
-              <button type="button" id="7days" class="btn btn-default">7 Days</button>
-              <button type="button" id="14days" class="btn btn-default">14 Days</button>
-              <button type="button" id="28days" class="btn btn-default">28 Days</button>
+             Cell Title
             </div>
-          </div>
           <div class="chart-stage">
-             <div id='map' style='width: 400px; height: 300px;'></div>
+             <div id='map'></div>
           </div>
           <div class="chart-notes">
           </div>
