--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -98,7 +98,7 @@
              Cell Title
             </div>
           <div class="chart-stage">
-             <div id='map'></div>
+             <div id='map'style='width: 600px; height: 300px;'></div>
           </div>
           <div class="chart-notes">
           </div>
