--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -92,7 +92,7 @@
       </div>
        
        
-       <div class="col-sm-8">
+       <div class="col-sm-8" id="mapwrap">
         <div class="chart-wrapper">
           <div class="chart-title">
              Cell Title
