--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -101,6 +101,7 @@
              <div id="map" style="width: 1200px; height: 250px;">
           </div>
           <div class="chart-notes">
+             Notes about this chart
           </div>
         </div>
       </div>
