--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-6 col-md-4">
+      <div class="col-sm-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Cell Title
