--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -44,7 +44,7 @@
       <div class="col-sm-8">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Cell Title
+            This month
           </div>
           <div class="chart-stage">
             <div id="mychart">
@@ -52,7 +52,7 @@
             </div>
           </div>
           <div class="chart-notes">
-            Notes about this chart
+            kwhr
           </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-md-6">
         <div class="chart-wrapper">
           <div class="chart-title">
             Cell Title
@@ -99,13 +99,15 @@
             </div>
           <div class="chart-stage">
              <div id="map" style="width: 1200px; height: 250px;">
+               
+          </div>
           </div>
           <div class="chart-notes">
              Notes about this chart
           </div>
         </div>
       </div>
-    </div>
+   
 
 
   
