--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -41,7 +41,7 @@
   <div class="container-fluid">
 
     <div class="row">
-      <div class="col-sm-8">
+      <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
             This month
@@ -57,7 +57,7 @@
         </div>
       </div>
       
-     <div class="col-sm-4">
+     <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
             Cell Title
@@ -75,7 +75,7 @@
     </div>
 
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
             Cell Title
@@ -92,7 +92,7 @@
       </div>
        
        
-       <div class="col-sm-8" id="mapwrap">
+       <div class="col-sm-6 col-md-4" id="mapwrap">
         <div class="chart-wrapper">
           <div class="chart-title">
              Cell Title
