--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -60,7 +60,7 @@
      <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Cell Title
+            Total this year
           </div>
           <div class="chart-stage">
             <div id="mychartt">
@@ -68,7 +68,7 @@
             </div>
           </div>
           <div class="chart-notes">
-            Notes about this chart
+            kwhr
           </div>
         </div>
       </div>
