--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -280,8 +280,7 @@ mapboxgl.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03Zmhwe
   var map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/sensit/cioz2giry000gaynf3o9v8koe',
-      zoom: 13,
-      hash: true
+      zoom: 13
   });
 
   });
