--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -282,6 +282,8 @@ mapboxgl.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03Zmhwe
       style: 'mapbox://styles/sensit/cioz2giry000gaynf3o9v8koe'
   });
 
+map.addControl(new mapboxgl.Navigation());
+
   });
  </script>
  
