--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -78,15 +78,15 @@
       <div class="col-sm-6 col-md-8">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Cell Title
+            This month
           </div>
           <div class="chart-stage">
-             <div id="mycharttt">
-               
+            <div id="mycharttt">
+            
             </div>
-           </div>
+          </div>
           <div class="chart-notes">
-            Notes about this chart
+            kwhr
           </div>
         </div>
       </div>
