--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -278,13 +278,13 @@ client.draw(queryy, document.getElementById("mycharttt"), {
   });
 
 mapboxgl.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg';
-  var map = new mapboxgl.Map({
-      container: 'map',
-      style: 'mapbox.streets',
-      center: [-74.50, 40], // starting position
-      zoom: 9 // starting zoom
-  });
 
+
+var map = L.mapbox.map('map', 'mapbox.streets', {
+        center: [38.91557, -77.03198],
+        zoom: 16
+    });
+    
 map.addControl(new mapboxgl.Navigation());
 
   });
