--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -87,7 +87,7 @@
              Cell Title
             </div>
           <div class="chart-stage">
-             <div id="map" style="width: 1200px; height: 250px;">
+             <div id="map">
                
           </div>
           </div>
