--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -20,7 +20,8 @@
         
 </head>
 
-  
+<body>
+    
 <body class="application">
 
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
