--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -19,11 +19,9 @@
 
         
 </head>
-
-<body>
     
 <body class="application">
-
+ <style>
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -200,6 +198,7 @@
     <p class="small text-muted">Built with &#9829; by <a href="https://keen.io">Keen IO</a></p>
 
   </div>
+</style>
 
   <script type="text/javascript" src="../../assets/lib/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="../../assets/lib/bootstrap/dist/js/bootstrap.min.js"></script>
