--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -296,7 +296,7 @@ L.mapbox.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03Zmhwe
         zoom: 16
     });
 
-    L.marker([38.9206, -77.0357]).bindLabel('Meridian Hill Park').addTo(map);
+    L.marker([46.5653, 66.4619]).bindLabel('New Brunswick 1340kwh/mth').addTo(map);
     L.marker([38.909776, -77.034097]).bindLabel('Sweetgreen').addTo(map);
     L.marker([38.917139, -77.031745]).bindLabel('Subway').addTo(map);
     L.marker([38.915300, -77.031724]).bindLabel('Manny & Olga\'s Pizza').addTo(map);
