--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -296,8 +296,8 @@ L.mapbox.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03Zmhwe
         zoom: 16
     });
 
-    L.marker([46.5653, -66.4619]).bindLabel('New Brunswick 1340kwh/mth').addTo(map);
-    L.marker([56.1304, -106.3468]).bindLabel('Sweetgreen').addTo(map);
+    L.marker([46.5653, -66.4619]).bindLabel('New Brunswick 1340kWh/mth').addTo(map);
+    L.marker([56.1304, -106.3468]).bindLabel('Cadana 900kWh/mth').addTo(map);
 
 </script>
 
