--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -293,11 +293,11 @@ client.draw(queryy, document.getElementById("mycharttt"), {
 L.mapbox.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg';
     var map = L.mapbox.map('map', 'mapbox.streets', {
         center: [46.5653, -66.4619],
-        zoom: 1
+        zoom: 2
     });
 
     L.marker([46.5653, -66.4619]).bindLabel('New Brunswick 1340kWh/mth').addTo(map);
-    L.marker([56.1304, -106.3468]).bindLabel('Cadana 900kWh/mth').addTo(map);
+    L.marker([56.1304, -106.3468]).bindLabel('Canada 900kWh/mth').addTo(map);
 
 </script>
 
