--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -298,7 +298,11 @@ L.mapbox.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03Zmhwe
 
     L.marker([46.5653, -66.4619]).bindLabel('New Brunswick 1340kWh/mth').addTo(map);
     L.marker([56.1304, -106.3468]).bindLabel('Canada 900kWh/mth').addTo(map);
+    L.marker([44.6820, -63.7443]).bindLabel('Nova Scotia TBD kWh/mth').addTo(map);
+    L.marker([46.5107, -63.4168]).bindLabel('PEI TBD kWh/mth').addTo(map);
+    L.marker([46.8139, -71.2080]).bindLabel('Quebec TBD kWh/mth').addTo(map);
 
+ 
 </script>
 
 </body>
