--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -301,9 +301,17 @@ L.mapbox.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03Zmhwe
     L.marker([44.6820, -63.7443]).bindLabel('Nova Scotia TBD kWh/mth').addTo(map);
     L.marker([46.5107, -63.4168]).bindLabel('PEI TBD kWh/mth').addTo(map);
     L.marker([46.8139, -71.2080]).bindLabel('Quebec TBD kWh/mth').addTo(map);
+    L.marker([51.2538, -85.3232]).bindLabel('Ontario TBD kWh/mth').addTo(map);
+    L.marker([53.1355, -57.6604]).bindLabel('NFLD TBD kWh/mth').addTo(map);
+    L.marker([53.7609, -98.8139]).bindLabel('Manitoba TBD kWh/mth').addTo(map);
+    L.marker([52.9399, -106.4509]).bindLabel('Saskatchewan TBD kWh/mth').addTo(map);
+    L.marker([53.9333, -116.5765]).bindLabel('Alberta TBD kWh/mth').addTo(map);
+    L.marker([53.7267, -127.6476]).bindLabel('Brtish Columbia TBD kWh/mth').addTo(map);
+    L.marker([64.2823, -135.0000]).bindLabel('Yukon TBD kWh/mth').addTo(map);
+    L.marker([64.8255, -124.8457]).bindLabel('NWT TBD kWh/mth').addTo(map);
+    
 
- 
-</script>
+ </script>
 
 </body>
 </html>
