--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -313,5 +313,39 @@ L.mapbox.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03Zmhwe
 
  </script>
 
+<script>
+  var feed = 'http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_month.geojson';
+
+mapboxgl.util.getJSON(feed, function(err, data) {
+    // Add response data as source.
+    map.addSource('earthquakes', {
+        type: 'geojson',
+        data: data
+    });
+
+    // Add response data as source.
+    map.addLayer({
+        "id": "map",
+        "type": "circle",
+        "source": "earthquakes",
+        "paint": {
+            "circle-color": "#f00",
+            "circle-radius": {
+                "property": "mag",
+                "base": 1.8,
+                "stops": [
+                    [{zoom: 0,  value: 2}, 1],
+                    [{zoom: 0,  value: 8}, 40],
+                    [{zoom: 11, value: 2}, 10],
+                    [{zoom: 11, value: 8}, 2400],
+                    [{zoom: 20, value: 2}, 20],
+                    [{zoom: 20, value: 8}, 6000]
+                ]
+            }
+        }
+    });
+});
+
+</script>
 </body>
 </html>
