--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -325,7 +325,7 @@ mapboxgl.util.getJSON(feed, function(err, data) {
 
     // Add response data as source.
     map.addLayer({
-        "id": "map",
+        "id": "earthquake-layer",
         "type": "circle",
         "source": "earthquakes",
         "paint": {
