--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -313,7 +313,9 @@ L.mapbox.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03Zmhwe
     L.marker([64.2823, -135.0000]).bindLabel('Yukon TBD kWh/mth').addTo(map);
     L.marker([64.8255, -124.8457]).bindLabel('NWT TBD kWh/mth').addTo(map);
     
+ </script>
 
+<script>
 
   var feed = 'http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_month.geojson';
 
