--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -298,13 +298,14 @@ client.draw(queryy, document.getElementById("mycharttt"), {
 
 <script>
 L.mapbox.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg';
- 
- var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v8',
-    zoom: 15,
-    center: [-71.97722138410576, -13.517379300798098]
-});  
+
+   
+    var map = L.mapbox.map('map', 'mapbox.streets', {
+        center: [46.5653, -66.4619],
+        zoom: 2
+    });
+    
+
 
 
     L.marker([46.5653, -66.4619]).bindLabel('New Brunswick 1340kWh/mth').addTo(map);
