--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -302,6 +302,7 @@ L.mapbox.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03Zmhwe
    
     var map = L.mapbox.map('map', 'mapbox.streets', {
         center: [46.5653, -66.4619],
+        layer: "earthquake-layer",
         zoom: 2
     });
     
