--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -285,7 +285,7 @@ client.draw(queryy, document.getElementById("mycharttt"), {
 });
     
 </script>
-
+<nav id="menu"></nav>
  <div id='map'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg';
